--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ li{
 }
 .boby{
 	position: relative;
-	background-image: url(images/背景5.jpg);
+	background-image: url(../images/背景5.jpg);
 	background-size: 100% 100%;
 	width: 100%;
 	height: 1650px;
@@ -54,7 +54,7 @@ li{
 }
 .left1{
 	position: absolute;
-	background-image: url(images/青年.png);
+	background-image: url(../images/青年.png);
 	background-size: 100% 100%;
 	width: 65%;
 	height: 110%;
@@ -410,7 +410,7 @@ p{
 }
 .bq_ul{
 	width: 403px;
-	height: 86;
+	height: 86px;
 	position: absolute;
 	left: 304px;
 	top:50px;
