--- a/css/index.css
+++ b/css/index.css
@@ -1,532 +1,500 @@
 @charset "utf-8";
-/* CSS Document */
 
-.ec{
-	display:flex;
-	justify-content:  space-between;
+.ec {
+	display: flex;
+	justify-content: space-between;
 }
-.ec p{
-	margin-bottom:0;
-	
+
+.ec p {
+	margin-bottom: 0;
 }
-.btn{
-	width:49.5%;
+
+.btn {
+	width: 48%;
 }
-.right2 .ful img{
+
+.right2 .ful img {
 	top: 8px;
 	width: 50px;
 	height: 50px;
 	float: left;
 	margin-right: 5px;
 }
-.header{
-	padding-left: 10%;
-	padding-right: 10%;
-	/* width: 100%; */
+
+.header {
+	align-items: center;
+	background-clip: padding-box;
 	background-color: #1cc3c9;
-	/* position: absolute; */
-	height: 50px;
+	height: 60px;
 	z-index: 999;
 	display: flex;
-	justify-content:  space-between;
+	justify-content: space-between;
 }
-.logo{
-	width: 50px;
-	/* max-width: 3%; */
-	/* position: absolute; */
-	/* margin-left: 10%; */
-	/* margin-top: 5px; */
+
+.logo {
+	height: 75%;
 	cursor: pointer;
 }
-.daohang{
-	display:  flex;
+
+.daohang {
+	display: flex;
 	padding-left: 0;
 	margin: 0;
-	/* margin-left:45%; */
 	cursor: pointer;
 	height: 30px;
 }
-.daohang li{
+
+.daohang li {
 	list-style: none;
 	float: left;
-	/* margin-left: 2%; */
 }
-.left1 li{
+
+.left1 li {
+	color: white;
+	text-decoration: none;
 	list-style: none;
 	float: left;
 	margin-left: 2%;
 }
-.header li{
+
+.header li {
 	display: flex;
 	margin-left: 6px;
 	list-style: none;
 }
-.search{
+
+.search {
 	justify-content: space-between;
 	display: flex;
 	height: 15%;
 	font-size: 18px;
-	/* margin-bottom: 4%; */
-	/* position: absolute; */
 	padding: 13px;
-	/* margin-top:-5px; */
 }
-.search2{
+
+.search2 {
 	width: 100%;
 	justify-content: space-between;
 	display: flex;
 	height: 15%;
 	font-size: 18px;
-	/* margin-bottom: 4%; */
-	/* position: absolute; */
-	/* padding: 10px; */
-	align-items:  center;
-	/* margin-top:-5px; */
+	align-items: center;
 }
-.fangdajing{
-	/* margin-left: 730%; */
-	/* width: 85%; */
-	/* margin-top:-5px; */
+
+.fangdajing {
 }
-body{
+
+body {
 	width: 100%;
-	margin:  0px auto;
+	margin: 0px auto;
 	background-image: url(../images/背景5.jpg);
 	background-size: 100% 100%;
-	padding-top:  0;
+	padding-top: 0;
 }
-.container{
-	position: relative;
-	margin-left: 10%;
-	margin-right: 10%;
-	/* height: 1650px; */
+
+.container {
+	max-width: 1140px;
+	width: 100%;
+	overflow: hidden;
+	margin: 0 auto;
+	min-width: 755px;
 }
-.main1{
+
+.main1 {
 	display: flex;
-	justify-content:  space-between;
+	justify-content: space-between;
 	margin-bottom: 10px;
 	height: 363px;
-	/* margin-top: 6%; */
 }
-.left1{
-	display:  flex;
-	/* margin-right: 1%; */
-	flex-direction:  column;
+
+.left1 {
+	display: flex;
+	flex-direction: column;
 	background-image: url(../images/青年.png);
 	background-size: 100% 100%;
 	width: 64%;
 	height: 100%;
 	align-items: center;
 }
-.search1{
+
+.search1 {
 	font-size: 14px;
 	line-height: 26px;
-	/* margin-left: 2%; */
-	/* position: absolute; */
-	/* margin-top: 2%; */
 }
-.select1{
+
+.select1 {
 	font-size: 10.5px;
-	/* margin-left: 29%; */
-	/* position: absolute; */
-	/* margin-top: 2%; */
 }
-.fangdajing2{
-	/* width: 4.5%; */
+
+.fangdajing2 {
 	cursor: pointer;
-	/* margin-left: 36%; */
-	/* margin-top: 2%; */
-	/* position: absolute; */
 }
-.fenlei{
-	/* margin-top: 3%; */
-	/* margin-left: 40%; */
-	color:aliceblue;
+
+.fenlei {
+	color: aliceblue;
 }
-.xiala1{
+
+.xiala1 {
 	margin-top: 3%;
 	height: 70%;
 	width: 95%;
-	overflow-y:auto;
+	overflow-y: auto;
 }
-.xialatiao1{
+
+.xialatiao1 {
 	margin-bottom: 4%;
-	display:  flex;
+	display: flex;
 	height: 53.53px;
-	/* margin-left: 5%; */
 }
-.example{
-	/* height: 10%; */
+
+.example {
 	background-color: #4F4F4F;
-	opacity:0.5;
-	/* float: left; */
-	/* margin-left: 10.5%; */
+	opacity: 0.5;
 	width: 89%;
-	/* margin-top: -11%; */
-	/* display:  flex; */
 }
-.title{
+
+.title {
 	margin-top: 0%;
 	margin-left: 2%;
 	margin-bottom: 0;
 	color: aliceblue;
 }
-.xialatiao_image{
+
+.xialatiao_image {
 	height: 100%;
 	position: relative;
 }
-p{
+
+p {
 	font-size: 14px;
 	color: aliceblue;
 }
-.right1{
+
+.right1 {
 	flex-direction: column;
-	display:  flex;
+	display: flex;
 	justify-content: space-between;
 	width: 35%;
-	/* height:55%; */
-	/* margin-left: 67%; */
-	/* margin-top: 4%; */
-	/* background-color: aliceblue; */
 	border-radius: 5px;
 }
-.touxiang{
-	/* width: 40%; */
-	height: 64%;
-	/* margin-left: 55%; */
-	/* margin-top: -37%; */
+
+.touxiang {
+	height: 100%;
 }
-.block_btn{
-	/* margin-top: 1%; */
+
+.block_btn {
 	display: flex;
-	/* flex-direction:  column; */
+	justify-content: space-between;
 	width: 100%;
 	height: 49.5%;
 }
-.dec{
-	font-weight: bold;
+
+.dec {
+	font-size: 20px;
+	font-weight: 500;
 	color: white;
+	vertical-align: top;
 	text-decoration: none;
 	display: inline-block;
-	/* padding-top: 25px; */
-	/* padding-bottom: 25px; */
-	/* margin-bottom: 5px; */
+	border: none;
 	text-shadow: 0.05em 0.05em 0.05em black;
-	height: 49.5%;
+	height: 48.5%;
 	width: 48%;
 	text-align: center;
 	border-radius: 5px;
 	cursor: pointer;
 }
-.pic{
+
+.pic {
 	margin-top: 18%;
 	box-shadow: 0.2px 0.2px 0.2px #d6d4ce;
 }
-.main2{
-	/* position: absolute; */
-	display:  flex;
-	/* left: 0; */
-	/* right: 0; */
-	/* top: 0; */
-	/* bottom: 0; */
-	/* margin: auto; */
+
+.main2 {
+	display: flex;
 	height: 825px;
-	/* width: 1100px; */
 	margin-bottom: 10px;
 }
-.left2{
-	/* position: absolute; */
+
+.left2 {
 	width: 64%;
 	margin-right: 1%;
-	/* height: 92.5%; */
 	overflow-y: auto;
 	background-color: aliceblue;
 	opacity: 0.9;
 }
-.image{
+
+.image {
 	margin-right: 2%;
 	float: left;
 	position: relative;
 	max-height: 100%;
 	max-width: 100%;
 }
-.information{
+
+.information {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
-.information p{
+
+.information p {
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
 
-.example1{
+.example1 {
 	height: 210px;
 	margin-bottom: 5px;
 }
 
-.right2{
-	display:  flex;
+.right2 {
+	display: flex;
 	width: 35%;
-	flex-direction:  column;
-	justify-content:  space-between;
-	/* margin-left: -11% */
+	flex-direction: column;
+	justify-content: space-between;
 }
 
-.friends{
-	float:right;
-	/* width:35%; */
+.friends {
+	border-radius: 0.3em;
+	float: right;
 	height: 48%;
-	/* margin-bottom: 2%; */
-	background:#FFFFFF;
+	background: #FFFFFF;
 }
 
 .ful li {
 	list-style: none;
 	margin-right: 0;
 	margin-left: 0;
-	width:100%;
+	width: 100%;
 	height: 50px;
 	position: relative;
 	margin-top: 0;
 	cursor: pointer;
 }
-.ful li p {
 
+.ful li p {
 	color: #000000;
 }
-.ful li:hover{
+
+.ful li:hover {
 	background-color: #A3A3A3;
 }
 
-.friends p{
+.friends p {
 	font-size: 13px;
 	margin-left: 50px;
 }
-.redian{
-	/* float: right; */
+
+.redian {
 	height: 23%;
-	/* width: 35%; */
-	background-color:aliceblue;
-	/* margin-bottom: 2%; */
-	/* margin-right: -35%; */
+	border-radius: 0.3em;
+	background-color: aliceblue;
 }
-.img-right{
-	/* float: right; */
+
+.img-right {
 	height: 25%;
-	/* width: 35%; */
-	/* margin-top: 59%; */
-	/* margin-right: -35%; */
-}
-.zong span{
-	font-size: 14px;
-	margin-left: 10%;
-}
-.main3{
-	/* position: absolute; */
-	/* width: 108%; */
-	/* margin-left: -3%; */
-}
-.lv{
-	/* width:69.4%; */
-	height:220px;
-	/*border:1px solid cadetblue;*/
-	margin:0 auto;
 }
 
-.lv_left{
-	float:left;
-	width:10%;
-	height:100%;
-	/*border:1px solid coral;*/
-	position:relative;
+.lv {
+	display: flex;
+	justify-content: space-between;
+	height: 220px;
+	margin: 0 auto;
+	margin-bottom: 15px;
 }
 
-.lv_right{
-	float:right;
-	width:89%;
-	height:100%;
-	/*border:1px solid chartreuse;*/
-	background-color: #efefef;
-	opacity:0.8;
-}
-
-.lt{
-	width:100%;
-	height:45.4545%;
-	/*background-size:100% 100%;*/
-	/*border: 1px solid black;*/
-	cursor: pointer;
-}
-.lt img{
-	width:100%;
-	height:100%;
-}
-.lt p{
-	text-align: center;
-	/*margin-top:40%;*/
-	font-size: 120%;
-	opacity:0;
-	color: #000;
-	font-weight: bold;
-	/*display: none;*/
-}
-.wt p{
-	text-align: center;
-	/*margin-top:40%;*/
-	font-size: 120%;
-	opacity:0;
-	color: #000;
-	font-weight: bold;
-}
-
-.wt{
-	width:100%;
-	height:45.4545%;
-	/*border:1px solid crimson;*/
-	position:absolute;
-	bottom:0;
-	cursor: pointer;
-}
-.wt img{
-	width:100%;
-	height:100%;
-}
-
-.wd{
+.lv_left {
 	float: left;
-	width:59.775%;
-	height:92%;
-	/*border:1px solid crimson;*/
-	margin-left: 2.24%;
-	margin-top:1%;
+	width: 10%;
+	height: 100%;
 	position: relative;
 }
-.wd li{
+
+.lv_right {
+	float: right;
+	width: 89%;
+	height: 100%;
+	background-color: #efefef;
+	opacity: 0.8;
+}
+
+.lt {
+	height: 45.4545%;
+	cursor: pointer;
+}
+
+.lt img {
+	width: 100%;
+	height: 100%;
+}
+
+.lt p {
+	text-align: center;
+	font-size: 120%;
+	opacity: 0;
+	color: #000;
+	font-weight: bold;
+}
+
+.wt p {
+	text-align: center;
+	font-size: 120%;
+	opacity: 0;
+	color: #000;
+	font-weight: bold;
+}
+
+.wt {
+	height: 45.4545%;
+	position: absolute;
+	bottom: 0;
+	cursor: pointer;
+}
+
+.wt img {
+	width: 100%;
+	height: 100%;
+}
+
+.wd {
+	float: left;
+	width: 59.775%;
+	height: 92%;
+	margin-left: 2.24%;
+	margin-top: 1%;
+	position: relative;
+}
+
+.wd li {
 	font-size: 90%;
 }
-.wd span{
+
+.wd span {
 	float: right;
-	position:absolute;
-	right:0;
+	position: absolute;
+	right: 0;
 }
-.wd a{
+
+.wd a {
 	text-decoration: none;
 	color: black;
 }
-.wd ul a:hover{
+
+.wd ul a:hover {
 	color: #646860;
 }
 
-.syy,.xyy{
-	width:7%;
-	height:10%;
+.syy,.xyy {
+	width: 7%;
+	height: 10%;
 	background-color: #ffffff;
 }
-.syy{
+
+.syy {
 	float: left;
 	margin-left: 28%;
 }
-.xyy{
+
+.xyy {
 	float: right;
 	margin-right: 28%;
 }
-.syy a,.xyy a{
+
+.syy a,.xyy a {
 	color: #bcbac1;
 	text-decoration: none;
 	font-size: 70%;
 }
-.syy a:hover,.xyy a:hover{
+
+.syy a:hover,.xyy a:hover {
 	box-shadow: 0.2px 0.2px 0.2px #d6d4ce;
 	color: #a9afa1;
 }
-.ys{
+
+.ys {
 	float: left;
 	margin-left: 12%;
 	font-size: 80%;
 }
 
-.tw{
+.tw {
 	float: right;
-	width:30.561%;
-	height:92%;
-	/*border:1px solid crimson;*/
+	width: 30.561%;
+	height: 92%;
 	margin-right: 2.24%;
-	margin-top:1%;
+	margin-top: 1%;
 }
-.ban{
-	width:98%;
-	height:58.762%;
+
+.ban {
+	width: 98%;
+	height: 58.762%;
 	background-color: #fff;
 	opacity: 1;
-	margin-top:2%;
+	margin-top: 2%;
 	box-shadow: 2px 2px 2px #acacac;
 }
-.fb{
-	width:20%;
-	height:12%;
+
+.fb {
+	width: 20%;
+	height: 12%;
 	border-radius: 2px;
 	background-color: #1cc3c9;
 	box-shadow: 1.5px 1.5px 1px #3facb1;
 	margin-left: 78%;
-	margin-top:4%;
+	margin-top: 4%;
 }
-.fb p{
+
+.fb p {
 	text-align: center;
 }
-.fb a{
+
+.fb a {
 	text-decoration: none;
 }
-.bq{
-	width: 100%;
+
+.bq {
+	display: flex;
 	height: 120px;
-	margin-left: auto;
-	margin-right: auto;
+	justify-content: space-between;
+	align-items: center;
 	background: #1cc3c9;
-	position:relative;
+	position: relative;
 }
-.bq_ul{
-	width: 403px;
+
+.bq_ul {
+	width: 50%;
 	height: 86px;
-	position: absolute;
-	left: 304px;
-	top:50px;
-	margin-top: -3%;
 }
-.bq_ul li{
+
+.bq_ul li {
 	width: 168px;
 	float: left;
 	font-size: 12px;
 	line-height: 30px;
-	color:white;
-
+	color: white;
 }
-.bq_lx{
-	width: 293px;
+
+.bq_lx {
+	width: 40%;
 	height: 50px;
-	overflow: hidden;
-	position: absolute;
 	left: 720px;
-	top:58px;
+	top: 58px;
 }
 
-.bq_lx img{
+.bq_lx img {
 	margin-right: 40px;
-	cursor:pointer;
+	cursor: pointer;
 	width: 12%
 }
-.kk{
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	left: 1060px;
-	top:28px;
-	cursor:pointer;
+
+.kk {
+	cursor: pointer;
 }
 
 .denglu {
-    display:  flex;
-    height: 49.5%;
-    justify-content:  space-between;
-    background-color:  aliceblue;
+	border-radius: 0.3em;
+	display: flex;
+	height: 49.5%;
+	justify-content: space-between;
+	background-color: aliceblue;
 }
