--- a/css/index.css
+++ b/css/index.css
@@ -90,11 +90,11 @@ body {
 }
 
 .container {
-    max-width: 1140px;
+    max-width: 1200px;
     width: 100%;
     overflow: hidden;
     margin: 0 auto;
-    min-width: 755px;
+    min-width: 850px;
     box-sizing: border-box;
 }
 
@@ -312,6 +312,8 @@ p {
 }
 
 .lv_right {
+    display:  flex;
+    justify-content:  space-between;
     float: right;
     width: 100%;
     height: 100%;
@@ -419,34 +421,42 @@ p {
 }
 
 .tw {
-    float: right;
-    width: 30.561%;
+    display:  flex;
+    flex-direction: column;
+    width: 30%;
     height: 92%;
     margin-right: 2.24%;
     margin-top: 1%;
 }
 
+#tw1{
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.tw .btn2{
+    box-shadow: 1.5px 1.5px 1px #3facb1;
+    border: none;
+    border-radius: 2px;
+    background-color: #1cc3c9;
+}
+
 .ban {
-    width: 98%;
-    height: 58.762%;
-    background-color: #fff;
+    /* width: 98%; */
+    height: 60%;
+    /* background-color: #fff; */
     opacity: 1;
-    margin-top: 2%;
+    /* margin-top: 2%; */
     box-shadow: 2px 2px 2px #acacac;
 }
 
 .fb {
-    width: 20%;
+    display: flex;
+    justify-content: space-between;
     height: 12%;
-    border-radius: 2px;
-    background-color: #1cc3c9;
-    box-shadow: 1.5px 1.5px 1px #3facb1;
-    margin-left: 78%;
-    margin-top: 4%;
-}
-
-.fb p {
-    text-align: center;
+    /* margin-top: 4%; */
 }
 
 .fb a {
