--- a/css/index.css
+++ b/css/index.css
@@ -509,3 +509,40 @@ p {
     justify-content: space-between;
     background-color: aliceblue;
 }
+
+#tform label {
+    float: left;
+    margin-right: 3%;
+    width: 25%;
+    text-align: right;
+}
+
+#tform input {
+    height: 20px;
+}
+
+#modal1 {
+    display: none;
+    background: rgba(0, 0, 0, 0.60);
+    z-index: 998;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+#modal1 .mbox {
+    z-index: 999;
+    background: white;
+    box-shadow: black;
+    border-radius: .5em;
+    max-width: 550px;
+    height: 300px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content: space-between;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 2%;
+}
