--- a/css/index.css
+++ b/css/index.css
@@ -152,7 +152,7 @@ body {
 }
 
 .title {
-    margin-top: 0%;
+    margin-top: 0;
     margin-left: 2%;
     margin-bottom: 0;
     color: aliceblue;
@@ -224,16 +224,12 @@ p {
 }
 
 .image {
-    margin-right: 2%;
-    float: left;
-    position: relative;
+    width: 30%;
     max-height: 100%;
-    max-width: 100%;
 }
 
 .information {
-    position: relative;
-    width: 100%;
+    width: 68%;
     height: 100%;
 }
 
@@ -243,7 +239,10 @@ p {
 }
 
 .example1 {
+    display: flex;
+    justify-content: space-between;
     height: 210px;
+    width: 100%;
     margin-bottom: 5px;
 }
 
