--- a/css/UserCenter.css
+++ b/css/UserCenter.css
@@ -24,7 +24,7 @@
     height: 50%;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 #boxHead {
@@ -89,12 +89,13 @@
 }
 
 .information {
+    padding: 4%;
     height: 430px;
     display: flex;
     margin-top: 1.5%;
     margin-bottom: 1.5%;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-image: url(../images/background.png);
     background-size: 100% 100%;
@@ -104,7 +105,7 @@
     width: 40%;
     display: flex;
     flex-direction: column;
-    height: 80%;
+    height: 100%;
     align-content: space-between;
 }
 
@@ -122,7 +123,7 @@
     width: 40%;
     display: flex;
     flex-direction: column;
-    height: 80%;
+    height: 100%;
     align-content: space-between;
 }
 
@@ -160,7 +161,7 @@
     /* box-shadow: 0 0 15px #03a9f4; */
 }
 
-.infomation input:focus {
+.information input:focus {
     border: none;
 }
 
