--- a/css/UserCenter.css
+++ b/css/UserCenter.css
@@ -97,7 +97,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-image: url(../images/background.png);
+    background-image: url(../images/ucback.png);
     background-size: 100% 100%;
 }
 
