--- a/css/contest.css
+++ b/css/contest.css
@@ -479,12 +479,30 @@ body {
     height: 50%;
     color: #fff;
 }
-
-.teamInfoCardText, .teamInfoCardTextSearch {
-    height: 50%;
-    padding: 2%;
+.teamInfoCardTextTitle{
+    display: flex;
+    margin-bottom: 2%;
 }
-
+.teamInfoCardTextTitle .title{
+    margin: auto;
+    font-size: 24px;
+    color:#212121;
+}
+.cardTextEntry{
+    font-size:16px;
+    color:#757575;
+}
+.teamInfoCardText, .teamInfoCardTextSearch {
+    display: flex;
+    height: 50%;
+    padding: 5%;
+}
+.cardWrapper{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
 .teamInfoPage {
     width: 100%;
     height: 20px;
